fix: -utiliza ul e li para itens do menu -utiliza gap para espaçamento de links e botão do menu

--- a/01 - WeLoveDogs/css/style.css
+++ b/01 - WeLoveDogs/css/style.css
@@ -3,6 +3,7 @@
     border: 0;
     margin: 0;
     padding: 0;
+    text-decoration: none;
 }
 
 /* Page base styles */
@@ -12,7 +13,7 @@ body {
 }
 
 /* Header styles */
-header {
+header nav {
     display: flex;
     justify-content: space-between;
 
@@ -21,7 +22,7 @@ header {
     color: #FFFFFF;
 }
 
-header .logo {
+header nav .logo {
     font-weight: 700;
     font-size: 48px;
     line-height: 65px;
@@ -30,24 +31,24 @@ header .logo {
     cursor: pointer;
 }
 
-header .logo span {
+header nav .logo span {
     color: #7ED321;
 }
 
-header nav {
+header nav ul {
+    list-style: none;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
     align-content: flex-end;
+
+    gap: 35px;
 }
 
-header a {
-    text-decoration: none;
-}
 
-header nav .nav-item {
-    margin: 0 17.5px;
-
+header nav ul li a, 
+header nav ul li button {
     text-transform: uppercase;
     font-weight: 700;
     font-size: 16px;
@@ -57,11 +58,11 @@ header nav .nav-item {
     cursor: pointer;
 }
 
-header nav .nav-item:hover {
+header nav ul li a:hover {
     color: #4F4F4F;
 } 
 
-header nav button.nav-item {
+header nav ul li button {
     padding: 9px 32px;
 
     background: rgba(126, 211, 33, 0.4);
@@ -71,6 +72,6 @@ header nav button.nav-item {
     color: #1C4701;
 }
 
-header nav button.nav-item:hover {
+header nav ul li button:hover {
     background: rgba(126, 211, 33, 0.9);
 }
